// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when the material has all indicator renders correctly 1`] = `
Array [
  <div
    style={
        Object {
            "overflow": "auto",
          }
    }
>
    <h6
        className="MuiTypography-root-2 MuiTypography-h6-19 MuiTypography-colorTextSecondary-35"
        style={
            Object {
                "float": "left",
                "marginTop": 8,
              }
        }
    >
        Características
    </h6>
    <button
        className="MuiButtonBase-root-63 MuiButton-root-37 MuiButton-text-39 MuiButton-textPrimary-40 MuiButton-flat-42 MuiButton-flatPrimary-43"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
            Object {
                "float": "right",
              }
        }
        tabIndex="0"
        type="button"
    >
        <span
            className="MuiButton-label-38"
        >
            <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-66"
                color={undefined}
                focusable="false"
                role="presentation"
                style={
                    Object {
                        "marginRight": 10,
                      }
                }
                viewBox="0 0 24 24"
            >
                <path
                    d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                />
                <path
                    d="M0 0h24v24H0z"
                    fill="none"
                />
            </svg>
             Comparar
        </span>
        <span
            className="MuiTouchRipple-root-75"
        />
    </button>
</div>,
  <div
    height={320}
    width="100%"
>
    ResponsiveContainer - 
    <div
        className="Component-radar-1"
        data={
            Array [
                Object {
                  "subject": "Materialidade",
                  "value": 4,
                },
                Object {
                  "subject": "Manufatura",
                  "value": 4,
                },
                Object {
                  "subject": "Gestão e governança",
                  "value": 4,
                },
                Object {
                  "subject": "Humano social",
                  "value": 4,
                },
              ]
        }
        outerRadius="50%"
    >
        RadarChart - 
        <div>
            PolarGrid - 
        </div>
        <div
            dataKey="subject"
        >
            PolarAngleAxis - 
        </div>
        <div
            domain={
                Array [
                    0,
                    4,
                  ]
            }
            tick={false}
        >
            PolarAngleAxis - 
        </div>
        <div
            dataKey="value"
            fill="#239eb1"
            fillOpacity={0.6}
            name="Mike"
            stroke="#239eb1"
        >
            Radar - 
        </div>
    </div>
</div>,
]
`;

exports[`when the material has no indicators renders correctly 1`] = `
Array [
  <div
    style={
        Object {
            "overflow": "auto",
          }
    }
>
    <h6
        className="MuiTypography-root-2 MuiTypography-h6-19 MuiTypography-colorTextSecondary-35"
        style={
            Object {
                "float": "left",
                "marginTop": 8,
              }
        }
    >
        Características
    </h6>
</div>,
  <p
    className="MuiTypography-root-2 MuiTypography-body1-11"
>
    Este material ainda não possui indicadores
</p>,
]
`;

exports[`when the material has only 1 indicator at least renders correctly 1`] = `
Array [
  <div
    style={
        Object {
            "overflow": "auto",
          }
    }
>
    <h6
        className="MuiTypography-root-2 MuiTypography-h6-19 MuiTypography-colorTextSecondary-35"
        style={
            Object {
                "float": "left",
                "marginTop": 8,
              }
        }
    >
        Características
    </h6>
</div>,
  <div
    height={320}
    width="100%"
>
    ResponsiveContainer - 
    <div
        className="Component-radar-1"
        data={
            Array [
                Object {
                  "subject": "Materialidade",
                  "value": 4,
                },
                Object {
                  "subject": "Manufatura",
                  "value": 0,
                },
                Object {
                  "subject": "Gestão e governança",
                  "value": null,
                },
                Object {
                  "subject": "Humano social",
                  "value": null,
                },
              ]
        }
        outerRadius="50%"
    >
        RadarChart - 
        <div>
            PolarGrid - 
        </div>
        <div
            dataKey="subject"
        >
            PolarAngleAxis - 
        </div>
        <div
            domain={
                Array [
                    0,
                    4,
                  ]
            }
            tick={false}
        >
            PolarAngleAxis - 
        </div>
        <div
            dataKey="value"
            fill="#239eb1"
            fillOpacity={0.6}
            name="Mike"
            stroke="#239eb1"
        >
            Radar - 
        </div>
    </div>
</div>,
]
`;
